# eNNgine

./: CMakeLists.txt  LICENSE  README.md
include/: Perceptron.hpp  SigmoidNeuron.hpp  demos.hpp  mnist_helpers.hpp  types.hpp
src/: Perceptron.cpp  SigmoidNeuron.cpp  decimal_to_binary_demo.cpp  main.cpp  mnist_helpers.cpp  perceptron_demo.cpp  sigmoid_demo.cpp
